crates/scribe-core/tests/snapshots/svg__default_output.snap
---
source: crates/scribe-core/tests/svg.rs
expression: "render(&hello_world(), Options::new())"
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="284" height="96" viewBox="0 0 284 96" role="img" aria-label="Hello World">
  <style>
    .scribe-text { user-select: text; -webkit-user-select: text; white-space: pre; }
    .scribe-text::selection, .scribe-text ::selection { fill: #000; background: rgba(0, 90, 255, 0.35); }
  </style>
  <image href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAARwAAABgCAAAAADqCJIyAAAKtElEQVR4Ae3AA6AkWZbG8f937o3IzKdyS2Oubdu2bdu2bdu2bWmMnpZKr54yMyLu+Xa3anqmhztr1a+aq54PAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwAq/wmOJrTNZdMRzHv+O+2busHzsxxhWzw/AAT/Cd7y2LFrueLXjx079q38t7rh2LE35fl6n2PHjh3yfAFQeSFeZwk/cy0PcN9bwvy3+c/zphfgux/Ns/zC5wGf8lY8y1PeHTZ/XfwnA6DyQvz5AQw80PgnsMF/otmfwG88mmf5+T8BfvateJbf/BN4Q/GfDYDgf5bXBn6bZ/ttgN/h2X4HeG3+0wEQ/M/y2sDvmvvd80SAp97Os/wO8Nr8pwMg+J/lJU7BfY/jfr9rtm+C3+F+T74Ttl6e/3QABP+zxGsCv8P9fgde7bXht7nf7wCv3vGfDoDgf5jXBn6H+/02vNZrwu9wv98BXpv/fABU/p3+9mduu/3iDbe88tvOeFG0X/q9227vbn7Qm74Kz99rA79jAcB9j4fXPAVPueMmrvgd4LV5pks//A+33X3qloe/8008S/sNuOal4fYf/tu7Ll37ndfy3JY/8JdPPrzhke/yErwwAFT+XX7iK/6Iy772zId9WuVfkl/ztbdy2ee/zKe+Pc/Pi586z71PeAwA/K7ZePnu2nv5nXcDgKfeDtsvx2XnPu0HDrnsU97iCx7DMy3fCN72J/Y+9IcSYO9anss3fMHdAHzRG3zvdbxgAAT/DtNHv/0f8UxnP/vNLvIvOHrHj72VZ/qrd/jU5PmI1wR+myt+B16112vC7wAAvwO8egXg8a/8rYdcMf3Uq/wKD3Tny/1AApA8J3/sh9/NFb/2Mk/kBQOg8m/X3vKXgMe8yqOvffxf/2ryq2/6+4UXpr3x7wGPeruHD0/8gfvgiy5+E8/Ha/8U/M6HAMBvw2vCa/4Yvw0A/A7w2gA8+VV3QW/0Gg+65y9/bOTSm//Um/Ms07s8hY03ePDmnb9sntOnfhXwkPd4ZDzpB558zzs+mBcIgMq/3Vf+Epz4/A8qAL/zXs/gj7/8k3hhvvr3oHztBxXg8z756+Fb3vYNeF6vDfyOBXDuH+C14DXhyXfeCMDvAK8N4A/YhRt/8hUBPv8d/5zpg/7hOPf7pZGP/9QTwGiew99+OfAZn9EBn/bln/K3f88LBEDlX/BNx3mASzzb338GbPzho7nstf70MRf4rPe5hhfsts8Evv29Adj8uvxG/EGPn/E8Xvz0Oe554qMBftfMXxFe/OQFfuddAZ7+DNh5WYDv/B04/VuPAOAhv/qaf89dn/JN3G/kKz4WgI7n9BETfOLnAlA/efzM5AUCoPIv+CJekK9Zw5c+mme65vM+jPVPfRAv2A8ewRu8N8/0pT99F0//9TfjecRr/iT89qMBfgdeaQ7x6j/L77wrwO8Ar14Bvh34rEdwxYmvf234/q+ac79X/Rien8f/Ltz02TzTp3z/k3iBAAj+rcafhAd/KM/yQSfhx3ghfgr4LO63+YnAT/F8vDbwOwD8NrwmwGvCbwPwO8BrA9z1J3D9B3G/13odOPg1nuUTxfPzc8DHLnim+om8YAAE/4LFxsbGxsbGxsbGxsbGxoJn+Y0L8JriWcpj4S94we79Mzj5yjzLmwM/z/Px2sDvAJz/e3gtgNeEJ90N8DvAawP8ouENO57lzYGf536z1+P5+kXgjXiWN+IFAyD4Fzzx8PDw8PDw8PDw8PDw8Mk8y98DrwmA7czWHg27S16gZxheo/AsD7sZ7j3ieb34abj7icDvJf2rALzMNvw28Iynw87LAjwdeC2e7bWBp3O/R2zxfD0VTj2GZ7npobxAAAT/VncDHxAhKSJKqfXbgXt5ge4FbuABbgTu43npNYHfAX4HXn4DoL4q/A7wO8BrFIB7gRt4thuB+7jfaZ4vn4XrxLNdxwsEQPBvdQ9gm+ewxwt0H3CaBzgF3Mvz8drAbwO/Da8FAK8JvwP8DvDaANwHnObZTgnu5X4neL4ureEUD3CKFwiAyr/VEri+8pw6XiAD4gEEmOfjtYHfgYt/C68JAK8JT7jnOn4HeG0ADIjnZO4nni8D4gHECwRA5d/qeuCHX5MX2TXAOR7gHHAtz8eLnz7HXU965O8l9dUA4BUWS37nnW5/Khx7GQCuBc7xbBcM1/IvON4PnOcBzvMCARD8W90IPJEX3bXA3TzA3cC1PB96LeB3+B14mW0AmL0S/Da/A7xGAeAa4G6e7S7gWv4FOgP38gD38AIBEPxbPRT4Q150DxL8fvIstz4Drtng+Xlt4Lf5bXgtnuk14Xf4HeC1AeDBwO/ybL8LPIh/yUPh7BN5lrufxgsEQPBv9aYb8GN7vMiuezk4++c8yy8Cb8bz9drA7+z+Dbwmz/Sa8IR7fwd4bQB4U8GvNp7lF4A341/yJsCv8Cy/al4gAIJ/q523gcMv5EX31sDncb/VlwJvw/P1Ymfgzu9qxGvwTK/c4R98Mhx/aQC46RXgju/ifn/8a7D5RvxL3gL4qjXP1L6UFwyA4N/sIyp86U/yAOfu5oV41wX8/I/xTJ/xDLjlDXi+9JrAl8FLHeeZNl8evgx4zcIV7wt8xjO4Yv/DDO+64F/y4q8Mt34hz/RVj+MFAyD4N3ulzwG/wycdcoV/451v+hNeiId8FvBu32eA9Sd/OfDNc56/1wbuhtfkWV4T7gZem2f6gFeDe17nHwC4603+Eq77Yv5lXx/wuV/cAPJrPxHxAgFQ+bf75D/+OfJLv+EtXuH6/hm33vq3z+Bf8HE/9SeM7/mV7/Cw4Ynfezvwvm/CC/DaXPZaPMtrfgkAr80zxbe90j5Pf8m3eY1b7v3L71tBfONJ/mUv95FfDZ/yPe/zSD35e/+Oxzzs53lBAKj828VPfc4XJIc//MO8aOqvvevPw1//NVd8zJfxgrzYmbOAXoNnebXSgBMvxf0e8/tvcRv5Ez8BAFs/8Ja8KL5i+S3whE8C4NSPfj4vEADBv0P53F9/w8L95m/xHa/LC7X9019wPc/06O/7ysILotcCeLHTPMuxlwJ4zeBZXvJP3mPGFfHGv/+WvEjim770FFe82l++OC8YADIv2G80eM05D7D6XSivxwPc+aNPuPMu3XDjjY99oy2e6c8vEK/PZef+Eh59C88y/tTv3XZbd8uD3vR1xQvxlKcB174Uz/a39wAPeQQPdPb7/+G2u0/d8vB3fTjP0n4DrnlpHuA3GidegWfZ/86/fMrhDY98l1eCv70HXq/w/AAgc9XzAUBw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wNAcNXzA0Bw1fMDQHDV8wPAPwLOMnVr/6JlnAAAAABJRU5ErkJggg==" width="284" height="96"/>
  <g class="scribe-text" font-family="sans-serif" fill="transparent">
    <text class="scribe-line"><tspan class="scribe-word" x="28" y="56.6" font-size="32" textLength="98" lengthAdjust="spacingAndGlyphs">Hello</tspan> <tspan class="scribe-word" x="143" y="56.6" font-size="32" textLength="113" lengthAdjust="spacingAndGlyphs">World</tspan></text>
  </g>
</svg>
