crates/scribe-core/tests/snapshots/svg__linked_image.snap
---
source: crates/scribe-core/tests/svg.rs
expression: "render(&hello_world(), Options::new().with(\"image_mode\", \"link\"))"
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" id="scribe-wa550p" class="scribe-wa550p-root" width="284" height="96" viewBox="0 0 284 96">
  <style>
    #scribe-wa550p { color-scheme: light dark; }
    #scribe-wa550p .scribe-wa550p-text { all: revert; fill: transparent; stroke: none; font-family: sans-serif; font-style: normal; font-weight: normal; font-variant: normal; font-stretch: normal; letter-spacing: normal; word-spacing: normal; text-anchor: start; text-decoration: none; text-transform: none; direction: ltr; user-select: text; -webkit-user-select: text; white-space: pre; }
    #scribe-wa550p .scribe-wa550p-text text, #scribe-wa550p .scribe-wa550p-text tspan { fill: inherit; stroke: inherit; font-family: inherit; font-style: inherit; font-weight: inherit; font-variant: inherit; font-stretch: inherit; letter-spacing: inherit; word-spacing: inherit; text-anchor: inherit; text-decoration: inherit; text-transform: inherit; direction: inherit; unicode-bidi: isolate; white-space: inherit; user-select: inherit; -webkit-user-select: inherit; }
    #scribe-wa550p .scribe-wa550p-text::selection, #scribe-wa550p .scribe-wa550p-text ::selection { fill: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent); }
  </style>
  <image href="hello.png" width="284" height="96"/>
  <g class="scribe-wa550p-text">
    <text class="scribe-wa550p-line"><tspan class="scribe-wa550p-word" x="28" y="56.6" font-size="32" textLength="98" lengthAdjust="spacingAndGlyphs">Hello</tspan> <tspan class="scribe-wa550p-word" x="143" y="56.6" font-size="32" textLength="113" lengthAdjust="spacingAndGlyphs">World</tspan></text>
  </g>
</svg>
