crates/scribe-core/tests/snapshots/svg__no_stylesheet.snap
---
source: crates/scribe-core/tests/svg.rs
expression: "linked(&hello_world(), Options::new().with(\"include_style\", false))"
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" id="scribe-wa550p" class="scribe-wa550p-root" width="284" height="96" viewBox="0 0 284 96">
  <image href="hello.png" width="284" height="96"/>
  <g class="scribe-wa550p-text" style="all: revert; fill: transparent; stroke: none; font-family: sans-serif; font-style: normal; font-weight: normal; font-variant: normal; font-stretch: normal; letter-spacing: normal; word-spacing: normal; text-anchor: start; text-decoration: none; text-transform: none; direction: ltr; user-select: text; -webkit-user-select: text; white-space: pre;">
    <text class="scribe-wa550p-line"><tspan class="scribe-wa550p-word" x="28" y="56.6" font-size="32" textLength="98" lengthAdjust="spacingAndGlyphs">Hello</tspan> <tspan class="scribe-wa550p-word" x="143" y="56.6" font-size="32" textLength="113" lengthAdjust="spacingAndGlyphs">World</tspan></text>
  </g>
</svg>
