crates/scribe-core/tests/snapshots/svg__rotated_line.snap
---
source: crates/scribe-core/tests/svg.rs
expression: "linked(&turned(hello_world(), 30.0), Options::new())"
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="scribe-root" width="284" height="96" viewBox="0 0 284 96" role="img" aria-label="Hello World">
  <style>
    .scribe-root { color-scheme: light dark; }
    .scribe-text { user-select: text; -webkit-user-select: text; white-space: pre; }
    .scribe-text::selection, .scribe-text ::selection { fill: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent); }
  </style>
  <image href="hello.png" width="284" height="96"/>
  <g class="scribe-text" font-family="sans-serif" fill="transparent">
    <text class="scribe-line" transform="rotate(30 142.5 47.13)"><tspan class="scribe-word" x="28.5" y="56.73" font-size="32" textLength="98" lengthAdjust="spacingAndGlyphs">Hello</tspan> <tspan class="scribe-word" x="143.5" y="56.73" font-size="32" textLength="113" lengthAdjust="spacingAndGlyphs">World</tspan></text>
  </g>
</svg>
